--- a/demo3/demo3.html
+++ b/demo3/demo3.html
@@ -111,7 +111,7 @@
 		}
 	#jiaru-w{
 		left:760px;
-		top:7030px;
+		top:6000px;
 		
 		text-align:center;
 		font-size:83px;
@@ -159,7 +159,7 @@
     	<p>成员介绍</p>
        </span> 
         <span id="chengyuan1">
-    	<img src="../images/大二考核项目/素材包/成员/E5F40632-25D6-42AD-A5F1-F97C2AB4765E.png" />
+    	<img src="/images/QQ图片20191024103030.jpg" style="width:65px;height:65px;position:absolute;border-radius:65px 65px;" />
     </span>
    
 </div>
